// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecdsa-examples ECDSA-01: ECDSA - P-256 - sign0 should properly decode the payload 1`] = `
Sign1 {
  "payload": {
    "data": [
      84,
      104,
      105,
      115,
      32,
      105,
      115,
      32,
      116,
      104,
      101,
      32,
      99,
      111,
      110,
      116,
      101,
      110,
      116,
      46,
    ],
    "type": "Buffer",
  },
  "protectedHeaders": Map {
    1 => -7,
    3 => 0,
  },
  "signature": {
    "data": [
      101,
      32,
      187,
      175,
      32,
      129,
      215,
      224,
      237,
      15,
      149,
      247,
      110,
      176,
      115,
      61,
      102,
      112,
      5,
      247,
      70,
      124,
      236,
      75,
      135,
      185,
      56,
      26,
      107,
      161,
      237,
      232,
      224,
      13,
      242,
      159,
      50,
      163,
      114,
      48,
      243,
      154,
      132,
      42,
      84,
      130,
      31,
      221,
      34,
      48,
      146,
      129,
      157,
      119,
      40,
      239,
      185,
      211,
      160,
      8,
      11,
      117,
      56,
      11,
    ],
    "type": "Buffer",
  },
  "unprotectedHeaders": Map {
    4 => {
      "data": [
        49,
        49,
      ],
      "type": "Buffer",
    },
  },
}
`;

exports[`ecdsa-examples ECDSA-01: ECDSA - P-256 should properly decode the payload 1`] = `
Sign {
  "payload": {
    "data": [
      84,
      104,
      105,
      115,
      32,
      105,
      115,
      32,
      116,
      104,
      101,
      32,
      99,
      111,
      110,
      116,
      101,
      110,
      116,
      46,
    ],
    "type": "Buffer",
  },
  "protectedHeaders": Map {
    3 => 0,
  },
  "signatures": [
    Signature {
      "protectedHeaders": Map {
        1 => -7,
      },
      "signature": {
        "data": [
          215,
          28,
          5,
          219,
          82,
          201,
          206,
          127,
          27,
          245,
          170,
          192,
          19,
          52,
          187,
          234,
          202,
          193,
          216,
          106,
          35,
          3,
          230,
          238,
          170,
          137,
          38,
          111,
          69,
          192,
          30,
          214,
          2,
          202,
          100,
          158,
          175,
          121,
          13,
          139,
          201,
          157,
          36,
          88,
          69,
          124,
          166,
          168,
          114,
          6,
          25,
          64,
          231,
          175,
          190,
          72,
          226,
          137,
          223,
          172,
          20,
          106,
          226,
          88,
        ],
        "type": "Buffer",
      },
      "unprotectedHeaders": Map {
        4 => {
          "data": [
            49,
            49,
          ],
          "type": "Buffer",
        },
      },
    },
  ],
  "unprotectedHeaders": Map {},
}
`;

exports[`ecdsa-examples ECDSA-02: ECDSA - P-384 should properly decode the payload 1`] = `
Sign {
  "payload": {
    "data": [
      84,
      104,
      105,
      115,
      32,
      105,
      115,
      32,
      116,
      104,
      101,
      32,
      99,
      111,
      110,
      116,
      101,
      110,
      116,
      46,
    ],
    "type": "Buffer",
  },
  "protectedHeaders": Map {},
  "signatures": [
    Signature {
      "protectedHeaders": Map {
        1 => -35,
      },
      "signature": {
        "data": [
          35,
          13,
          242,
          75,
          159,
          49,
          221,
          45,
          125,
          27,
          156,
          51,
          206,
          89,
          7,
          63,
          194,
          30,
          2,
          187,
          99,
          220,
          85,
          132,
          118,
          38,
          181,
          183,
          244,
          57,
          5,
          213,
          154,
          204,
          24,
          104,
          144,
          188,
          31,
          232,
          182,
          209,
          46,
          97,
          176,
          55,
          63,
          251,
          161,
          49,
          236,
          198,
          194,
          25,
          88,
          205,
          255,
          40,
          173,
          119,
          224,
          195,
          47,
          154,
          12,
          108,
          162,
          71,
          19,
          95,
          83,
          132,
          150,
          34,
          139,
          43,
          229,
          85,
          126,
          125,
          189,
          114,
          128,
          219,
          36,
          180,
          107,
          104,
          192,
          119,
          45,
          27,
          174,
          240,
          157,
          229,
        ],
        "type": "Buffer",
      },
      "unprotectedHeaders": Map {
        4 => {
          "data": [
            80,
            51,
            56,
            52,
          ],
          "type": "Buffer",
        },
      },
    },
  ],
  "unprotectedHeaders": Map {},
}
`;

exports[`ecdsa-examples ECDSA-03: ECDSA - P-512 - sign0 should properly decode the payload 1`] = `
Sign1 {
  "payload": {
    "data": [
      84,
      104,
      105,
      115,
      32,
      105,
      115,
      32,
      116,
      104,
      101,
      32,
      99,
      111,
      110,
      116,
      101,
      110,
      116,
      46,
    ],
    "type": "Buffer",
  },
  "protectedHeaders": Map {
    1 => -36,
  },
  "signature": {
    "data": [
      1,
      102,
      77,
      214,
      150,
      32,
      145,
      181,
      16,
      13,
      110,
      24,
      51,
      213,
      3,
      83,
      147,
      48,
      236,
      43,
      200,
      253,
      62,
      137,
      150,
      149,
      12,
      233,
      247,
      2,
      89,
      217,
      163,
      15,
      115,
      121,
      79,
      96,
      59,
      13,
      62,
      124,
      94,
      156,
      76,
      42,
      87,
      225,
      2,
      17,
      247,
      110,
      121,
      223,
      143,
      253,
      27,
      121,
      215,
      239,
      91,
      159,
      167,
      218,
      16,
      144,
      1,
      150,
      95,
      162,
      211,
      126,
      9,
      59,
      177,
      60,
      4,
      3,
      153,
      196,
      103,
      179,
      185,
      144,
      140,
      9,
      219,
      43,
      15,
      31,
      73,
      150,
      254,
      7,
      187,
      2,
      170,
      161,
      33,
      168,
      225,
      198,
      113,
      243,
      249,
      151,
      173,
      231,
      214,
      81,
      8,
      16,
      23,
      5,
      123,
      211,
      168,
      165,
      251,
      243,
      148,
      151,
      46,
      167,
      28,
      253,
      193,
      94,
      111,
      143,
      226,
      225,
    ],
    "type": "Buffer",
  },
  "unprotectedHeaders": Map {
    4 => {
      "data": [
        98,
        105,
        108,
        98,
        111,
        46,
        98,
        97,
        103,
        103,
        105,
        110,
        115,
        64,
        104,
        111,
        98,
        98,
        105,
        116,
        111,
        110,
        46,
        101,
        120,
        97,
        109,
        112,
        108,
        101,
      ],
      "type": "Buffer",
    },
  },
}
`;

exports[`ecdsa-examples ECDSA-03: ECDSA - P-512 should properly decode the payload 1`] = `
Sign {
  "payload": {
    "data": [
      84,
      104,
      105,
      115,
      32,
      105,
      115,
      32,
      116,
      104,
      101,
      32,
      99,
      111,
      110,
      116,
      101,
      110,
      116,
      46,
    ],
    "type": "Buffer",
  },
  "protectedHeaders": Map {},
  "signatures": [
    Signature {
      "protectedHeaders": Map {
        1 => -36,
      },
      "signature": {
        "data": [
          0,
          162,
          210,
          138,
          124,
          43,
          219,
          21,
          135,
          135,
          116,
          32,
          246,
          90,
          223,
          125,
          11,
          154,
          6,
          99,
          93,
          209,
          222,
          100,
          187,
          98,
          151,
          76,
          134,
          63,
          11,
          22,
          13,
          210,
          22,
          55,
          52,
          3,
          78,
          106,
          192,
          3,
          176,
          30,
          135,
          5,
          82,
          76,
          92,
          76,
          164,
          121,
          169,
          82,
          240,
          36,
          126,
          232,
          203,
          11,
          79,
          183,
          57,
          123,
          160,
          141,
          0,
          158,
          12,
          139,
          244,
          130,
          39,
          12,
          197,
          119,
          26,
          161,
          67,
          150,
          110,
          90,
          70,
          154,
          9,
          246,
          19,
          72,
          128,
          48,
          197,
          176,
          126,
          198,
          215,
          34,
          227,
          131,
          90,
          219,
          91,
          45,
          140,
          68,
          233,
          95,
          251,
          19,
          135,
          125,
          210,
          88,
          40,
          102,
          136,
          53,
          53,
          222,
          59,
          176,
          61,
          1,
          117,
          63,
          131,
          171,
          135,
          187,
          79,
          122,
          2,
          151,
        ],
        "type": "Buffer",
      },
      "unprotectedHeaders": Map {
        4 => {
          "data": [
            98,
            105,
            108,
            98,
            111,
            46,
            98,
            97,
            103,
            103,
            105,
            110,
            115,
            64,
            104,
            111,
            98,
            98,
            105,
            116,
            111,
            110,
            46,
            101,
            120,
            97,
            109,
            112,
            108,
            101,
          ],
          "type": "Buffer",
        },
      },
    },
  ],
  "unprotectedHeaders": Map {},
}
`;

exports[`ecdsa-examples ECDSA-sig-02: ECDSA - P-384 - sign1 should properly decode the payload 1`] = `
Sign1 {
  "payload": {
    "data": [
      84,
      104,
      105,
      115,
      32,
      105,
      115,
      32,
      116,
      104,
      101,
      32,
      99,
      111,
      110,
      116,
      101,
      110,
      116,
      46,
    ],
    "type": "Buffer",
  },
  "protectedHeaders": Map {
    1 => -35,
  },
  "signature": {
    "data": [
      95,
      21,
      10,
      189,
      28,
      125,
      37,
      179,
      32,
      101,
      161,
      78,
      5,
      214,
      203,
      31,
      102,
      93,
      16,
      118,
      159,
      244,
      85,
      234,
      154,
      46,
      10,
      218,
      181,
      222,
      99,
      131,
      141,
      178,
      87,
      240,
      148,
      156,
      65,
      225,
      51,
      48,
      225,
      16,
      235,
      167,
      185,
      18,
      243,
      78,
      21,
      70,
      251,
      19,
      102,
      162,
      86,
      143,
      170,
      145,
      236,
      62,
      108,
      141,
      66,
      244,
      166,
      122,
      14,
      223,
      115,
      29,
      136,
      201,
      174,
      173,
      82,
      37,
      139,
      46,
      44,
      71,
      64,
      239,
      97,
      79,
      2,
      233,
      217,
      30,
      155,
      123,
      89,
      98,
      42,
      60,
    ],
    "type": "Buffer",
  },
  "unprotectedHeaders": Map {
    4 => {
      "data": [
        80,
        51,
        56,
        52,
      ],
      "type": "Buffer",
    },
  },
}
`;
